--- a/src/.umi/dumi/config.json
+++ b/src/.umi/dumi/config.json
@@ -4,7 +4,7 @@
       "*": [
         {
           "path": "/~docs",
-          "title": "Ant Design Pro",
+          "title": "Co.libris",
           "meta": {
             "order": null
           }
